# drcom.rs

./: .gitignore  Cargo.toml  DEVLOG.md  README.md  build-all.sh
.cargo/: config  config.toml
.github/workflows/: build.yaml
dev-scripts/: hexdump_to_bytes.py  translate_log.py
drcom/: Cargo.toml
drcom-cli/: Cargo.toml
drcom-cli/src/: main.rs
drcom/research/: annotate_login_packet.py
drcom/src/: config.rs  prelude.rs
drcom/src/app/: exception.rs  login.rs  mod.rs
research/: make_login_packet.py  parse.py
src/: config.rs  lib.rs
src/app/: exception.rs  login.rs  mod.rs
