[package]
name = "drcom-cli"
version = "0.1.1"
authors = ["zombie110year <zombie110year@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
env_logger = "^0.7"
dirs = "^3.0"
toml = "^0.5"
clap = "^2.33"
drcom = { path = "../drcom" }
