[package]
name = "drcom-cli"
version = "0.1.3"
authors = ["zombie110year <zombie110year@outlook.com>"]
edition = "2018"
description = "在命令行中使用的 Drcom Application"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
env_logger = "0.8.3"
dirs = "^3.0"
toml = "^0.5"
clap = "^2.33"
drcom = { path = "../drcom" }
